--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 variables:
   API_URL: "https://dummy.restapiexample.com/api/"
+  PABLO: "INICIAL"
 
 stages:
   - request_and_capture
@@ -14,7 +15,7 @@ request_and_capture:
     - echo $BUILD_AWS_REGION
     - RESPONSE=$(curl -s "$API_URL/v1/employees")
     - MESSAGE=$(echo $RESPONSE | jq -r '.message')
-    - MESSAGES=$(echo $RESPONSE | jq -r '.message')
+    - PABLO=$(echo $RESPONSE | jq -r '.message')
     - echo $RESPONSE
     - echo $MESSAGE
     - echo $MESSAGES
