--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ request_and_capture:
     - echo $BUILD_AWS_REGION
     - RESPONSE=$(curl -s "$API_URL/v1/employees")
     - MESSAGE=$(echo $RESPONSE | jq -r '.message')
-    - export PABLO=$(echo $RESPONSE | jq -r '.message')
+    - export PABLO="PABLO"
     - PILU="pilu"
     - PILU: "SEGUNDO"
     - echo $PABLO
