--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,9 @@ variables:
   API_URL: "https://dummy.restapiexample.com/api/"
   PILU: "INICIAL"
 
+environment:
+  PILU2: "PILU2"
+
 stages:
   - request_and_capture
 
@@ -17,6 +20,7 @@ request_and_capture:
     - MESSAGE=$(echo $RESPONSE | jq -r '.message')
     - export PABLO="PABLO"
     - PILU="pilu"
+    - PILU2="pilu3"
     - PILU: "SEGUNDO"
     - echo $PABLO
     - echo $RESPONSE
