--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ stages:
 
 request_and_capture:
   stage: request_and_capture
+  environment:
+    PILU2: "PILU2"
   before_script:
     - apt-get update
     - apt-get --assume-yes install jq
