--- a/login.yml
+++ b/login.yml
@@ -6,7 +6,10 @@ variables:
 
 null_login:
   stage: null_login
-  image: curlimages/curl:latest
+  image: ubuntu:latest
+  before_script:
+    - apt-get update
+    - apt-get install -y openssl
   script:
     - RESPONSE=$(curl "$API_URL")
     - echo "$RESPONSE" > api_response.txt
