--- a/login.yml
+++ b/login.yml
@@ -13,7 +13,7 @@ null_login:
   script:
     - RESPONSE=$(curl "$API_URL")
     - echo "$RESPONSE" > api_response.txt
-    - echo "$ENCRYPTION_KEY_FILE" | base64 -d > temp_encryption.key
+    - echo "$encription_key" | base64 -d > temp_encryption.key
     - openssl enc -aes-256-cbc -salt -in api_response.txt -out api_response.enc -pass file:temp_encryption.key
   artifacts:
     paths:
