--- a/nullplatform-login.yml
+++ b/nullplatform-login.yml
@@ -11,10 +11,7 @@ nullplatform-login:
     - apt-get update
     - apt-get install -y openssl curl
   script:
-    - NULL_PLATFORM_LOGIN_RESPONSE=$(curl -X POST \
-        -H "Content-Type: application/json" \
-        -d "{\"token\": \"$NULLPLATFORM_APIKEY\"}" \
-        $NULLPLATFORM_LOGIN_URL)
+    - NULL_PLATFORM_LOGIN_RESPONSE=$(curl -X POST -H "Content-Type: application/json" -d "{\"token\": \"$NULLPLATFORM_APIKEY\"}" $NULLPLATFORM_LOGIN_URL)
     - echo "$NULL_PLATFORM_LOGIN_RESPONSE" > nullplatform_login.response.json
     - openssl enc -iter 1000 -aes-256-cbc -salt -in nullplatform_login.response.json -out nullplatform_login.response.json.enc -pass file:$encription_key
   artifacts:
