--- a/nullplatform-login.yml
+++ b/nullplatform-login.yml
@@ -14,6 +14,7 @@ nullplatform-login:
   script:
     - NULL_PLATFORM_LOGIN_RESPONSE=$(curl -X POST -d "$NULLPLATFORM_LOGIN_BODY" $NULLPLATFORM_LOGIN_URL)
     - echo "$NULL_PLATFORM_LOGIN_RESPONSE" > nullplatform_login.response.json
+    - cat nullplatform_login.response.json
     - openssl enc -iter 1000 -aes-256-cbc -salt -in nullplatform_login.response.json -out nullplatform_login.response.json.enc -pass file:$encription_key
   artifacts:
     paths:
