--- a/nullplatform-login.yml
+++ b/nullplatform-login.yml
@@ -3,6 +3,7 @@ stages:
 
 variables:
   NULLPLATFORM_LOGIN_URL: "https://github-actions.nullplatform.io/login"
+  NULLPLATFORM_LOGIN_HEADERS: "Content-Type: application/json"
   NULLPLATFORM_LOGIN_BODY: "{\"token\": \"$NULLPLATFORM_APIKEY\"}"
 
 nullplatform-login:
@@ -12,7 +13,7 @@ nullplatform-login:
     - apt-get update
     - apt-get install -y openssl curl
   script:
-    - NULL_PLATFORM_LOGIN_RESPONSE=$(curl -X POST -d "$NULLPLATFORM_LOGIN_BODY" $NULLPLATFORM_LOGIN_URL)
+    - NULL_PLATFORM_LOGIN_RESPONSE=$(curl -X POST -H "$NULLPLATFORM_LOGIN_HEADERS" -d "$NULLPLATFORM_LOGIN_BODY" $NULLPLATFORM_LOGIN_URL)
     - echo "$NULL_PLATFORM_LOGIN_RESPONSE" > nullplatform_login.response.json
     - cat nullplatform_login.response.json
     - openssl enc -iter 1000 -aes-256-cbc -salt -in nullplatform_login.response.json -out nullplatform_login.response.json.enc -pass file:$encription_key
