--- a/nullplatform-application-metadata.yml
+++ b/nullplatform-application-metadata.yml
@@ -13,10 +13,11 @@ nullplatform-application-metadata:
     - apt-get update
     - apt-get install -y openssl curl jq
     - openssl enc -d -iter 1000 -aes-256-cbc -in nullplatform_login.response.json.enc -out nullplatform_login.response.json -pass file:$encription_key
-    - TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
+    - ACCESS_TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
+    - AUTHORIZATION_TOKEN="Authorization: $ACCESS_TOKEN"
   script:
-    - echo $TOKEN
-    - NULLPLATFORM_APPLICATION_METADATA_RESPONSE=$(curl -X POST -H "$NULLPLATFORM_APPLICATION_METADATA_HEADERS" -d "$NULLPLATFORM_APPLICATION_METADATA_BODY" "$NULLPLATFORM_APPLICATION_METADATA_URL?$NULLPLATFORM_APPLICATION_METADATA_PARAMS")
+    - echo $AUTHORIZATION_TOKEN
+    - NULLPLATFORM_APPLICATION_METADATA_RESPONSE=$(curl -X POST -H "$AUTHORIZATION_TOKEN" -H "$NULLPLATFORM_APPLICATION_METADATA_HEADERS" -d "$NULLPLATFORM_APPLICATION_METADATA_BODY" "$NULLPLATFORM_APPLICATION_METADATA_URL?$NULLPLATFORM_APPLICATION_METADATA_PARAMS")
     - echo "$NULLPLATFORM_APPLICATION_METADATA_RESPONSE" 
     - echo "$NULLPLATFORM_APPLICATION_METADATA_RESPONSE" > nullplatform_application_metadata.response.json
   artifacts:
