--- a/nullplatform-application-metadata.yml
+++ b/nullplatform-application-metadata.yml
@@ -16,7 +16,7 @@ nullplatform-application-metadata:
     - ACCESS_TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
   script:
     - NULLPLATFORM_APPLICATION_METADATA_RESPONSE=$(curl -H "Authorization:Bearer $ACCESS_TOKEN" -H "$NULLPLATFORM_APPLICATION_METADATA_HEADERS" "$NULLPLATFORM_APPLICATION_METADATA_URL?$NULLPLATFORM_APPLICATION_METADATA_PARAMS")
-    - echo "$NULLPLATFORM_APPLICATION_METADATA_RESPONSE" > nullplatform_application_metadata.response.json
+    - echo "$NULLPLATFORM_APPLICATION_METADATA_RESPONSE" > nullplatform_application_metadata.json
   artifacts:
     paths:
-      - nullplatform_application_metadata.response.json
+      - nullplatform_application_metadata.json
