--- a/nullplatform-build.yml
+++ b/nullplatform-build.yml
@@ -17,7 +17,6 @@ nullplatform-build:
     - |+
       jq -r '.[].id' nullplatform_application_metadata.json | while read -r id; do
         body="{\"application_id\":$id, \"commit\":{\"id\":\"$CI_COMMIT_SHA\", \"permalink\":\"https://github.com/kwik-e-mart/demo-application/commit/2b5fb0390d9a10925c9c3f117e1ab57d5aab6b27\"},\"description\":\"$CI_COMMIT_TITLE\",\"branch\":\"$CI_COMMIT_BRANCH\"}"
-        echo $body
-        #NULLPLATFORM_BUILD_RESPONSE=$(curl -X POST -H "$NULLPLATFORM_BUILD_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$body" $NULLPLATFORM_BUILD_URL)
-        #echo "$NULLPLATFORM_BUILD_RESPONSE"
+        NULLPLATFORM_BUILD_RESPONSE=$(curl -X POST -H "$NULLPLATFORM_BUILD_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$body" $NULLPLATFORM_BUILD_URL)
+        echo "$NULLPLATFORM_BUILD_RESPONSE"
       done
