--- a/nullplatform-build.yml
+++ b/nullplatform-build.yml
@@ -19,7 +19,11 @@ nullplatform-build:
       jq -r '.[].id' nullplatform_application_metadata.json | while read -r id; do
         NULLPLATFORM_BUILD_BODY="{\"application_id\":$id, \"commit\":{\"id\":\"$CI_COMMIT_SHA\", \"permalink\":\"https://github.com/kwik-e-mart/demo-application/commit/2b5fb0390d9a10925c9c3f117e1ab57d5aab6b27\"},\"description\":\"$CI_COMMIT_TITLE\",\"branch\":\"$CI_COMMIT_BRANCH\"}"
         NULLPLATFORM_BUILD_RESPONSE=$(curl -X POST -H "$NULLPLATFORM_BUILD_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$NULLPLATFORM_BUILD_BODY" $NULLPLATFORM_BUILD_URL)
-        BUILD_RESPONES+=($NULLPLATFORM_BUILD_RESPONSE)     
+        BUILD_RESPONES+=($NULLPLATFORM_BUILD_RESPONSE)
       done
     - printf "%s\n" "${BUILD_RESPONSES[@]}" > nullplatform-build.json
+  artifacts:
+    paths:
+      - nullplatform-build.json
+    expire_in: 30 min
 
