--- a/nullplatform-build.yml
+++ b/nullplatform-build.yml
@@ -14,16 +14,12 @@ nullplatform-build:
     - openssl enc -d -iter 1000 -aes-256-cbc -in nullplatform_login.response.json.enc -out nullplatform_login.response.json -pass file:$encription_key
     - ACCESS_TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
   script:
-    - BUILD_RESPONSES=()
     - |+
       jq -r '.[].id' nullplatform_application_metadata.json | while read -r id; do
         NULLPLATFORM_BUILD_BODY="{\"application_id\":$id, \"commit\":{\"id\":\"$CI_COMMIT_SHA\", \"permalink\":\"https://github.com/kwik-e-mart/demo-application/commit/2b5fb0390d9a10925c9c3f117e1ab57d5aab6b27\"},\"description\":\"$CI_COMMIT_TITLE\",\"branch\":\"$CI_COMMIT_BRANCH\"}"
         NULLPLATFORM_BUILD_RESPONSE=$(curl -X POST -H "$NULLPLATFORM_BUILD_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$NULLPLATFORM_BUILD_BODY" $NULLPLATFORM_BUILD_URL)
-        echo $NULLPLATFORM_BUILD_RESPONSE
-        BUILD_RESPONSES+=($NULLPLATFORM_BUILD_RESPONSE)
+        echo "$NULLPLATFORM_BUILD_RESPONSE\n" >> nullplatform-build.json
       done
-    - echo BUILD_RESPONSES
-    - printf "%s\n" "${BUILD_RESPONSES[@]}" > nullplatform-build.json
   artifacts:
     paths:
       - nullplatform-build.json
