--- a/nullplatform-build.yml
+++ b/nullplatform-build.yml
@@ -1,12 +1,12 @@
 stages:
-  - nullplatform-build
+  - nullplatform-build-create
 
 variables:
   NULLPLATFORM_BUILD_URL: "https://github-actions.nullplatform.io/build"
   NULLPLATFORM_BUILD_HEADERS: "Content-Type: application/json"
 
-nullplatform-build:
-  stage: nullplatform-build
+nullplatform-build-create:
+  stage: nullplatform-build-create
   image: ubuntu:latest
   before_script:
     - apt-get update
@@ -16,12 +16,12 @@ nullplatform-build:
   script:
     - |+
       jq -r '.[].id' nullplatform_application_metadata.json | while read -r id; do
-        NULLPLATFORM_BUILD_BODY="{\"application_id\":$id, \"commit\":{\"id\":\"$CI_COMMIT_SHA\", \"permalink\":\"https://github.com/kwik-e-mart/demo-application/commit/2b5fb0390d9a10925c9c3f117e1ab57d5aab6b27\"},\"description\":\"$CI_COMMIT_TITLE\",\"branch\":\"$CI_COMMIT_BRANCH\"}"
-        NULLPLATFORM_BUILD_RESPONSE=$(curl -X POST -H "$NULLPLATFORM_BUILD_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$NULLPLATFORM_BUILD_BODY" $NULLPLATFORM_BUILD_URL)
-        echo "$NULLPLATFORM_BUILD_RESPONSE\n" >> nullplatform-build.json
+        NULLPLATFORM_BUILD_CREATE_BODY="{\"application_id\":$id, \"commit\":{\"id\":\"$CI_COMMIT_SHA\", \"permalink\":\"https://github.com/kwik-e-mart/demo-application/commit/2b5fb0390d9a10925c9c3f117e1ab57d5aab6b27\"},\"description\":\"$CI_COMMIT_TITLE\",\"branch\":\"$CI_COMMIT_BRANCH\"}"
+        NULLPLATFORM_BUILD_CREATE_RESPONSE=$(curl -X POST -H "$NULLPLATFORM_BUILD_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$NULLPLATFORM_BUILD_BODY" $NULLPLATFORM_BUILD_URL)
+        echo "$NULLPLATFORM_BUILD_CREATE_RESPONSE\n" >> nullplatform-build-create.json
       done
   artifacts:
     paths:
-      - nullplatform-build.json
+      - nullplatform-build-create.json
     expire_in: 30 min
 
