--- a/nullplatform-build-update.yml
+++ b/nullplatform-build-update.yml
@@ -14,7 +14,7 @@ nullplatform-build-update:
     - openssl enc -d -iter 1000 -aes-256-cbc -in nullplatform_login.response.json.enc -out nullplatform_login.response.json -pass file:$encription_key
     - ACCESS_TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
   script:
-    - echo nullplatform-build-update.json
+    - cat nullplatform-build-create.json
     - |+
       jq -r '.[].id' nullplatform-build-create.json | while read -r id; do
         NULLPLATFORM_BUILD_UPDATE_BODY="{\"status\":\"in_progress\"}"
