--- a/nullplatform-build-update.yml
+++ b/nullplatform-build-update.yml
@@ -16,11 +16,12 @@ nullplatform-build-update:
   script:
     - cat nullplatform-build-create.json
     - |+
-      jq -r '.[].id' nullplatform-build-create.json | while read -r id; do
+      while IFS= read -r line; do
+        id=$(echo "$line" | jq -r '.id')
         NULLPLATFORM_BUILD_UPDATE_BODY="{\"status\":\"in_progress\"}"
         NULLPLATFORM_BUILD_UPDATE_RESPONSE=$(curl -X POST -H "$NULLPLATFORM_BUILD_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$NULLPLATFORM_BUILD_UPDATE_BODY" $NULLPLATFORM_BUILD_URL/$id)
-        echo $"$NULLPLATFORM_BUILD_UPDATE_RESPONSE\n" >> nullplatform-build-update.json
-      done
+        printf "%s\n" $NULLPLATFORM_BUILD_UPDATE_RESPONSE >> nullplatform-build-update.json
+      done < "nullplatform-build-create.json"
   artifacts:
     paths:
       - nullplatform-build-update.json
