--- a/nullplatform-build-update.yml
+++ b/nullplatform-build-update.yml
@@ -20,7 +20,9 @@ nullplatform-build-update:
         id=$(echo "$line" | jq -r '.id')
         echo $id
         NULLPLATFORM_BUILD_UPDATE_BODY="{\"status\":\"in_progress\"}"
-        NULLPLATFORM_BUILD_UPDATE_RESPONSE=$(curl -X POST -H "$NULLPLATFORM_BUILD_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$NULLPLATFORM_BUILD_UPDATE_BODY" $NULLPLATFORM_BUILD_URL/$id)
+        CURL="curl -X PATCH -H \"$NULLPLATFORM_BUILD_HEADERS\" -H \"Authorization:Bearer $ACCESS_TOKEN\" -d \"$NULLPLATFORM_BUILD_UPDATE_BODY\" $NULLPLATFORM_BUILD_URL/$id" 
+        echo $CURL
+        NULLPLATFORM_BUILD_UPDATE_RESPONSE=$(curl -X PATCH -H "$NULLPLATFORM_BUILD_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$NULLPLATFORM_BUILD_UPDATE_BODY" $NULLPLATFORM_BUILD_URL/$id)
         echo $NULLPLATFORM_BUILD_UPDATE_RESPONSE
         printf "%s\n" $NULLPLATFORM_BUILD_UPDATE_RESPONSE >> nullplatform-build-update.json
       done < nullplatform-build-create.json
