--- a/nullplatform-asset-docker-image-create.yml
+++ b/nullplatform-asset-docker-image-create.yml
@@ -2,7 +2,7 @@ stages:
   - nullplatform-asset-docker-image-create
 
 variables:
-  NULLPLATFORM_ASSET_URL: "https://ci.nullplatform.com/build" #build/:id/asset
+  NULLPLATFORM_URL: "https://ci.nullplatform.com" #build/:id/asset
   NULLPLATFORM_ASSET_HEADERS: "Content-Type: application/json"
 
 nullplatform-asset-docker-image-create:
@@ -17,10 +17,16 @@ nullplatform-asset-docker-image-create:
     - |+
       while IFS= read -r line; do
         BUILD_ID=$(echo "$line" | jq -r '.id')
+        APPLICATION_ID=$(echo "$line" | jq -r '.application_id')
         NULLPLATFORM_ASSET_CREATE_BODY="{\"type\":\"docker-image\",\"metadata\":{}}"
-        NULLPLATFORM_ASSET_CREATE_RESPONSE=$(curl -X POST -H "$NULLPLATFORM_ASSET_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$NULLPLATFORM_ASSET_CREATE_BODY" $NULLPLATFORM_ASSET_URL/$BUILD_ID/asset)
-        for ASSET_URL in $(jq -r '.targets[].url' $NULLPLATFORM_ASSET_CREATE_RESPONSE); do
+        NULLPLATFORM_ASSET_CREATE_RESPONSE=$(curl -X POST -H "$NULLPLATFORM_ASSET_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$NULLPLATFORM_ASSET_CREATE_BODY" $NULLPLATFORM_URL/build/$BUILD_ID/asset)
+        NULLPLATFORM_APPLICATION_PARAMETERS=$(curl -H "Authorization:Bearer $ACCESS_TOKEN" $NULLPLATFORM_URL/application/$APPLICATION_ID/parameter)
+        echo $NULLPLATFORM_APPLICATION_PARAMETERS
+        for ASSET_URL in $(echo "$$NULLPLATFORM_ASSET_CREATE_RESPONSE" | jq -r '.targets[].url'); do
           echo $ASSET_URL
+          #aws ecr get-login-password --region $BUILD_AWS_REGION | docker login --username AWS --password-stdin $ECR_REGISTRY
+          #docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          #docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         done
         echo $NULLPLATFORM_ASSET_CREATE_RESPONSE
         printf "%s\n" $NULLPLATFORM_ASSET_CREATE_RESPONSE >> nullplatform-asset-create.json
