--- a/nullplatform-asset-docker-image-create.yml
+++ b/nullplatform-asset-docker-image-create.yml
@@ -10,7 +10,7 @@ nullplatform-asset-docker-image-create:
   image: ubuntu:latest
   before_script:
     - apt-get update
-    - apt-get install -y openssl curl jq
+    - apt-get install -y openssl curl jq aws docker
     - openssl enc -d -iter 1000 -aes-256-cbc -in nullplatform_login.response.json.enc -out nullplatform_login.response.json -pass file:$encription_key
     - ACCESS_TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
   script:
