--- a/nullplatform-asset-docker-image-create.yml
+++ b/nullplatform-asset-docker-image-create.yml
@@ -36,16 +36,10 @@ nullplatform-asset-docker-image-create:
               eval "$name=\"$value\""
             fi
           done
-          AWS_ACCESS_KEY_ID="$BUILD_AWS_ACCESS_KEY"
-          AWS_SECRET_ACCESS_KEY="$BUILD_AWS_SECRET_ACCESS_KEY"
-          AWS_DEFAULT_REGION="$BUILD_AWS_REGION"
+          export AWS_ACCESS_KEY_ID="$BUILD_AWS_ACCESS_KEY"
+          export AWS_SECRET_ACCESS_KEY="$BUILD_AWS_SECRET_ACCESS_KEY"
+          export AWS_DEFAULT_REGION="$BUILD_AWS_REGION"
           ECR_REGISTRY=$(echo "$ASSET_URL" | cut -d '/' -f 1)
-          echo "AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID"
-          echo "AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY"
-          echo "AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION"
-          export AWS_ACCESS_KEY_ID
-          export AWS_SECRET_ACCESS_KEY
-          export AWS_DEFAULT_REGION
           aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REGISTRY
           docker build -t $ASSET_URL .
           #docker push $ASSET_URL
