--- a/nullplatform-asset-docker-image-create.yml
+++ b/nullplatform-asset-docker-image-create.yml
@@ -10,14 +10,14 @@ nullplatform-asset-docker-image-create:
   image: ubuntu:latest
   services:
     - docker:dind
-  before_script:
-    - apt-get update
-    - apt-get install -y openssl curl jq unzip docker.io
-    - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-    - unzip awscliv2.zip
-    - ./aws/install
-    - openssl enc -d -iter 1000 -aes-256-cbc -in nullplatform_login.response.json.enc -out nullplatform_login.response.json -pass file:$encription_key
-    - ACCESS_TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
+  before_script: |
+    apt-get update
+    apt-get install -y openssl curl jq unzip docker.io
+    curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+    unzip awscliv2.zip
+    ./aws/install
+    openssl enc -d -iter 1000 -aes-256-cbc -in nullplatform_login.response.json.enc -out nullplatform_login.response.json -pass file:$encription_key
+    ACCESS_TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
   script:
     - |+
       while IFS= read -r line; do
