--- a/nullplatform-asset-docker-image-create.yml
+++ b/nullplatform-asset-docker-image-create.yml
@@ -12,7 +12,7 @@ nullplatform-asset-docker-image-create:
     - docker:dind
   before_script: |
     apt-get update
-    apt-get install -y openssl curl jq unzip docker.io
+    apt-get install -y openssl curl jq unzip
     curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
     unzip awscliv2.zip
     ./aws/install
