--- a/nullplatform-asset-docker-image-create.yml
+++ b/nullplatform-asset-docker-image-create.yml
@@ -8,16 +8,11 @@ variables:
 nullplatform-asset-docker-image-create:
   stage: nullplatform-asset-docker-image-create
   image: ubuntu:latest
-  services:
-    - docker:dind
-  before_script: |
-    apt-get update
-    apt-get install -y openssl curl jq unzip
-    curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-    unzip awscliv2.zip
-    ./aws/install
-    openssl enc -d -iter 1000 -aes-256-cbc -in nullplatform_login.response.json.enc -out nullplatform_login.response.json -pass file:$encription_key
-    ACCESS_TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
+  before_script:
+    - apt-get update
+    - apt-get install -y openssl curl jq
+    - openssl enc -d -iter 1000 -aes-256-cbc -in nullplatform_login.response.json.enc -out nullplatform_login.response.json -pass file:$encription_key
+    - ACCESS_TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
   script:
     - |+
       while IFS= read -r line; do
@@ -36,13 +31,13 @@ nullplatform-asset-docker-image-create:
               eval "$name=\"$value\""
             fi
           done
-          export AWS_ACCESS_KEY_ID="$BUILD_AWS_ACCESS_KEY"
-          export AWS_SECRET_ACCESS_KEY="$BUILD_AWS_SECRET_ACCESS_KEY"
-          export AWS_DEFAULT_REGION="$BUILD_AWS_REGION"
+          AWS_ACCESS_KEY_ID="$BUILD_AWS_ACCESS_KEY"
+          AWS_SECRET_ACCESS_KEY="$BUILD_AWS_SECRET_ACCESS_KEY"
+          AWS_DEFAULT_REGION="$BUILD_AWS_REGION"
           ECR_REGISTRY=$(echo "$ASSET_URL" | cut -d '/' -f 1)
-          aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REGISTRY
-          docker build -t $ASSET_URL .
-          docker push $ASSET_URL
+          FILE_LINE=$(echo "ASSET_URL=$ASSET_URL AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY, AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION ECR_REGISTRY=$ECR_REGISTRY") 
+          echo $FILE_LINE
+          printf "%s\n" $FILE_LINE >> assets-to-create.txt
         done
         echo $NULLPLATFORM_ASSET_CREATE_RESPONSE
         printf "%s\n" $NULLPLATFORM_ASSET_CREATE_RESPONSE >> nullplatform-asset-create.json
@@ -50,5 +45,21 @@ nullplatform-asset-docker-image-create:
   artifacts:
     paths:
       - nullplatform-asset-create.json
+      - assets-to-create.txt
     expire_in: 30 min
 
+nullplatform-asset-docker-image-build-and-push:
+  image: docker:stable
+  stage: nullplatform-asset-docker-image-build-and-push
+  services:
+    - docker:dind
+  before_script:
+    - apk add --no-cache python3 py3-pip
+    - pip3 install --no-cache-dir awscli
+  script:
+    - cat assets-to-create.txt
+    - #aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REGISTRY
+    - #docker build -t $ASSET_URL .
+    - #docker push $ASSET_URL
+dependencies: 
+    - nullplatform-asset-docker-image-create
