--- a/nullplatform-asset-docker-image-create.yml
+++ b/nullplatform-asset-docker-image-create.yml
@@ -36,7 +36,7 @@ nullplatform-asset-docker-image-create:
           AWS_SECRET_ACCESS_KEY="$BUILD_AWS_SECRET_ACCESS_KEY"
           AWS_DEFAULT_REGION="$BUILD_AWS_REGION"
           ECR_REGISTRY=$(echo "$ASSET_URL" | cut -d '/' -f 1)
-          FILE_LINE=$(echo "ASSET_URL=$ASSET_URL AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY, AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION ECR_REGISTRY=$ECR_REGISTRY") 
+          FILE_LINE=$(echo "ASSET_URL=$ASSET_URL AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION ECR_REGISTRY=$ECR_REGISTRY") 
           echo $FILE_LINE
           printf "%s\n" $FILE_LINE >> assets-to-create.txt
         done
