--- a/nullplaftorm-asset-docker-image-build-and-push.yml
+++ b/nullplaftorm-asset-docker-image-build-and-push.yml
@@ -13,7 +13,8 @@ nullplatform-asset-docker-image-build-and-push:
     - cat assets-to-create.txt
     - |+ 
       while IFS= read -r line; do
-        for env_var in $line do
+        for env_var in $line 
+        do
           export "$env_var"
         done
         echo $AWS_DEFAULT_REGION
