--- a/nullplaftorm-asset-docker-image-build-and-push.yml
+++ b/nullplaftorm-asset-docker-image-build-and-push.yml
@@ -7,7 +7,7 @@ nullplatform-asset-docker-image-build-and-push:
   services:
     - docker:dind
   before_script:
-    - apk add --no-cache python3 py3-pip
+    - apk add --no-cache python3 py3-pip openssl
     - pip3 install --no-cache-dir awscli
   script:
     - openssl enc -d -iter 1000 -aes-256-cbc -in assets-to-create.txt.enc -out assets-to-create.txt -pass file:$encription_key
