--- a/nullplatform-application-metadata.yml
+++ b/nullplatform-application-metadata.yml
@@ -12,7 +12,7 @@ nullplatform-application-metadata:
   before_script:
     - apt-get update
     - apt-get install -y openssl curl jq
-    - openssl enc -d -iter 1000 -aes-256-cbc -in nullplatform_login.response.json.enc -out nullplatform_login.response.json -pass file:$encription_key
+    - openssl enc -d -iter 1000 -aes-256-cbc -in nullplatform_login.response.json.enc -out nullplatform_login.response.json -k "$NULLPLATFORM_ENCRIPTION_KEY"
     - ACCESS_TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
   script:
     - NULLPLATFORM_APPLICATION_METADATA_RESPONSE=$(curl -H "Authorization:Bearer $ACCESS_TOKEN" -H "$NULLPLATFORM_APPLICATION_METADATA_HEADERS" "$NULLPLATFORM_APPLICATION_METADATA_URL?$NULLPLATFORM_APPLICATION_METADATA_PARAMS")
